tests/errors/require_doesnt_exist.nm
require "a_file_that_doesnt_exist.nm";

abstract component Main {
    SomeComponentThatShouldHaveBeenImported;
    SomeComponentThatShouldHaveBeenImported;
}